--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: garygrossgarten/github-action-scp@v0.8.0
         with:
           local: .
-          remove: /home/admin/test
+          remote: /home/admin/test
           host: ${{ secrets.HOST_ADDR }}
           user: ${{ secrets.HOST_USR }}
           password: ${{ secrets.SECRET_PASS }}
