--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,17 @@ jobs:
   copy-via-ssh:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Copy via ssh
-        uses: garygrossgarten/github-action-scp@v0.8.0
-        with:
-          local: flsk
-          remote: /home/admin/test
-          host: ${{ secrets.HOST_ADDR }}
-          username: ${{ secrets.HOST_USR }}
-          password: ${{ secrets.SECRET_PASS }}
+      - name: add ssh key
+        run: ssh-add - <<<"${{ secrets.SSH_KEY }}"
+      - name: connect to server
+        run: ssh root@${{ secrets.HOST_ADDR }} "mkdir testest2"
+      # - name: Check out repository code
+      #   uses: actions/checkout@v3
+      # - name: Copy via ssh
+      #   uses: garygrossgarten/github-action-scp@v0.8.0
+      #   with:
+      #     local: flsk
+      #     remote: /home/admin/test
+      #     host: ${{ secrets.HOST_ADDR }}
+      #     username: ${{ secrets.HOST_USR }}
+      #     password: ${{ secrets.SECRET_PASS }}
