--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: mkdir .ssh
         run: mkdir .ssh
       - name: add known hosts
-        run: echo "${{ secrets.KNOWN_HOSTS }}" > ~./.ssh/known_hosts
+        run: echo "${{ secrets.KNOWN_HOSTS }}" > .ssh/known_hosts
       - name: connect to server
         run: ssh -i id_rsa root@${{ secrets.HOST_ADDR }} "mkdir testest2"
       # - name: Check out repository code
